spec/.test/config/valid/only_aliases.php
<?php

return [
    'aliases' => [
        'alias1' => 'id31',
        'alias2' => 'id32',
    ],
];
