spec/.test/config/invalid/tags_attributes.php
<?php

return [
    'parameters' => [],
    'aliases' => [],
    'factories' => [],
    'extensions' => [],
    'tags' => [
        'tag1' => [
            'id11' => [],
            'id12' => [],
            'id13' => [],
        ],
        'tag2' => [
            'id21' => [],
            'id22' => 1,
            'id23' => [],
        ],
        'tag3' => [
            'id31' => [],
            'id32' => [],
            'id33' => [],
        ],
    ]
];
